test/integration/bad/data_index/non_data_index1.stan
parameters {
  array[3] real y;

}
transformed parameters {
  real z[size(y)];
}
